name:                otp-authenticator
version:             0.1.0.0
synopsis:            OTP Authenticator (a la google) command line client, over gnupg
-- description:
homepage:            https://github.com/mstksg/otp-authenticator#readme
license:             BSD3
license-file:        LICENSE
author:              Justin Le
maintainer:          justin@jle.im
copyright:           (c) Justin Le 2016
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Authenticator
                       Encrypted
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , base32string
                     , binary
                     , bytestring
                     , containers
                     , cryptonite
                     , dependent-sum
                     , h-gpgme
                     , one-time-password
                     , singletons
                     , text
                     , time
                     , trifecta
                     , type-combinators
                     , uri-encode
  default-language:    Haskell2010
  ghc-options:         -Wall

executable otp-auth
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , aeson
                     , base32string
                     , binary
                     , bytestring
                     , cryptonite
                     , dependent-sum
                     , filepath
                     , h-gpgme
                     , microlens
                     , optparse-applicative
                     , otp-authenticator
                     , singletons
                     , text
                     , transformers
                     , type-combinators
                     , unix
                     , witherable
                     , yaml
  default-language:    Haskell2010

test-suite otp-authenticator-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , otp-authenticator
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mstksg/otp-authenticator
