name:                otp-authenticator
version:             0.1.0.0
synopsis:            OTP Authenticator (a la google) command line client, over gnupg
description:         Simple tool for keeping track of your one-time pad
                     two-factor authentication keys; basically a command-line
                     version of the canonical [Google Authenticator
                     App][gauth].
                     .
                     [gauth]: https://github.com/google/google-authenticator
                     .
                     The library uses GnuPG (through *h-gpgme*) to safely
                     encrypt your secret keys. The first time you use it, it
                     asks for a fingerprint to use for encryption. Currently
                     *GnuPG 1.x* has some issues with *h-gpgme* when asking
                     for keys, so *GPG 2.x* is recommended.  Keys are stored,
                     encrypted, at `~/.otp-auth.vault` by default.
homepage:            https://github.com/mstksg/otp-authenticator
license:             BSD3
license-file:        LICENSE
author:              Justin Le
maintainer:          justin@jle.im
copyright:           (c) Justin Le 2016
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Authenticator.Vault
                       Encrypted
                       Authenticator.Common
                       Authenticator.Options
  build-depends:       base >= 4.9 && < 5
                     , aeson
                     , unix
                     , base32string
                     , bifunctors
                     , binary
                     , bytestring
                     , containers
                     , cryptonite
                     , dependent-sum
                     , filepath
                     , h-gpgme
                     , one-time-password
                     , optparse-applicative
                     , singletons
                     , text
                     , time
                     , trifecta
                     , type-combinators
                     , uri-encode
                     , yaml
  default-language:    Haskell2010
  ghc-options:         -Wall

executable otp-auth
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , aeson
                     , base32string
                     , binary
                     , bytestring
                     , cryptonite
                     , dependent-sum
                     , filepath
                     , h-gpgme
                     , microlens
                     , optparse-applicative
                     , otp-authenticator
                     , singletons
                     , text
                     , transformers
                     , type-combinators
                     , unix
                     , witherable
                     , yaml
  default-language:    Haskell2010

test-suite otp-authenticator-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , otp-authenticator
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mstksg/otp-authenticator
